--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Contact</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -15,9 +16,9 @@
 		<h1>Jake Wyatt</h1>
 	
 		<ul>
-			<li><a href="contact.html" target="_blank">Contact</a></li>
-			<li><a href="portfolio.html" target="_blank">Portfolio</a></li>
-			<li><a href="index.html" target="_blank">About</a></li>
+			<li><a href="contact.html">Contact</a></li>
+			<li><a href="portfolio.html">Portfolio</a></li>
+			<li><a href="index.html">About</a></li>
 		</ul>
 
 	</header>
