--- a/index.html
+++ b/index.html
@@ -2,66 +2,60 @@
 <html lang="en">
 
 <head>
-	<title>About</title>
+	<title>About Me</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
 </head>
 
-<body>
-
-	<header id="Bar">
-		
-		<h1>Jake Wyatt</h1>
-		<ul>
-			<li><a href="contact.html">Contact</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="index.html">About</a></li>
-		</ul>
-
+<body>		
+	
+	<header id="masthead">
+	<div class="container">
+		<a href="index.html" id="logo">Jake Wyatt</a>
+			<nav>
+				<a href="index.html">About</a></li>
+				<a href="portfolio.html">Portfolio</a></li>
+				<a href="contact.html">Contact</a></li>	
+			</nav>
+		</div>
 	</header>
 
-		<section id="About">
-	
-			<h2>About Me</h2>
+	<div id="main-container" class="container">
 
-			<hr>
-
-				<div class="Bio">
-
-				<img id="ProfilePic" src="assets/images/Profile.jpg" alt="Profile Pic">
-			
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In egestas ante in nisi imperdiet posuere. Praesent suscipit dolor ligula, condimentum mattis odio cursus nec. Cras malesuada pharetra nibh ut sodales. Duis commodo quam est, a finibus tortor convallis at. Curabitur gravida arcu eu urna aliquam volutpat. Donec rhoncus libero sapien, placerat mollis ex sollicitudin nec. Nulla molestie odio felis, a vehicula urna tincidunt ac.</p>
-
-				<p>Morbi elit augue, dictum in blandit quis, dignissim quis leo. Mauris ac turpis neque. Fusce scelerisque orci mi, nec pretium neque volutpat nec. Aenean id dolor nec ipsum facilisis pharetra. Quisque sit amet elit non arcu lobortis dignissim. Donec egestas metus a enim luctus laoreet. Nulla at elit et urna laoreet venenatis. Vestibulum quis mi accumsan, varius velit sed, blandit ipsum.</p>
-				
-				</div>
+		<section class="main-section">
 		
+			<h1>About Me</h1>
+				
+			<img src="assets/images/Profile.jpg" class="auth-image" alt="Profile Pic">
+			
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In egestas ante in nisi imperdiet posuere. Praesent suscipit dolor ligula, condimentum mattis odio cursus nec. Cras malesuada pharetra nibh ut sodales. Duis commodo quam est, a finibus tortor convallis at. Curabitur gravida arcu eu urna aliquam volutpat. Donec rhoncus libero sapien, placerat mollis ex sollicitudin nec. Nulla molestie odio felis, a vehicula urna tincidunt ac.</p>
+
+			<p>Morbi elit augue, dictum in blandit quis, dignissim quis leo. Mauris ac turpis neque. Fusce scelerisque orci mi, nec pretium neque volutpat nec. Aenean id dolor nec ipsum facilisis pharetra. Quisque sit amet elit non arcu lobortis dignissim. Donec egestas metus a enim luctus laoreet. Nulla at elit et urna laoreet venenatis. Vestibulum quis mi accumsan, varius velit sed, blandit ipsum.</p>
+
 		</section>
 
-	<section id="Connect">
-		<h2>Connect with Me</h2>
+		<section class="sidebar">
+			<div id="connect">
+			<h2>Connect With Me</h2>
 		
-		<hr>
-
-			<div class="Links">
-			<a href="https://github.com/jrw4466" target="_blank">
-				<img src="assets/images/1491846948_29_GitHub.png" alt="GitHub Pic">
-			</a>
-			<a href="https://www.linkedin.com/in/jake-wyatt-ii-42ab9148" target="_blank">
-				<img src="assets/images/1491846863_linkedin_square_color.png" alt="LinkedIn Pic">
-			</a>
+			<a href="https://github.com/jrw4466">
+				<img src="assets/images/1491846948_29_GitHub.png" class="social" alt="GitHub Pic"></a>
+			<a href="https://www.linkedin.com/in/jake-wyatt-ii-42ab9148">
+				<img src="assets/images/1491846863_linkedin_square_color.png" class="social" alt="LinkedIn Pic"></a>
 			<a href="http://stackexchange.com/users/10614883/jwyatt955">
-				<img src="assets/images/1491847006_stackoverflow.png" alt="StackoverflowPic">
-			</a>
+				<img src="assets/images/1491847006_stackoverflow.png" class="social" alt="StackoverflowPic"></a>
 			</div>
+		</section>
+	</div>
 
-	</section>
-
-
-	<footer>@ Copyright 2016 Jake Wyatt</footer>
+	<footer>
+		<div class="container">
+			&copy; Copyright 2016 Jake Wyatt
+		</div>
+	</footer>
 
 </body>
 </html>
