--- a/portfolio.html
+++ b/portfolio.html
@@ -6,58 +6,76 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
 </head>
 
-<body>
-	<header id="Bar">
-		<h1>Jake Wyatt</h1>
-		<ul>
-			<li><a href="contact.html">Contact</a></li>
-			<li><a href="portfolio.html">Portfolio</a></li>
-			<li><a href="index.html">About</a></li>
-		</ul>
-
+<body>		
+	
+	<header id="masthead">
+	<div class="container">
+		<a href="index.html" id="logo">Jake Wyatt</a>
+			<nav>
+				<a href="index.html">About</a></li>
+				<a href="portfolio.html">Portfolio</a></li>
+				<a href="contact.html">Contact</a></li>	
+			</nav>
+		</div>
 	</header>
 
-	<section id="Portfolio">
-	
-		<h2>Portfolio</h2>
-		<hr>
-		<div class="Pic-set">
-			<img class="Pic Pic-1" src="assets/images/Hangman.jpg" alt="Pic1">		
-			<img class="Pic Pic-2" src="assets/images/LightingOne.jpg" alt="Pic2">		
-			<img class="Pic Pic-3" src="assets/images/LightingTwo.jpg" alt="Pic3">	
-			<img class="Pic Pic-4" src="assets/images/LightingThree.jpg" alt="Pic4">
-			<img class="Pic Pic-5" src="assets/images/game.jpg" alt="Pic5">
-				
+	<div id="main-container" class="container">
+
+		<section class="main-section">
+		
+			<h1>Portfolio</h1>
+			
+			<div class="work">	
+				<img src="assets/images/Hangman.jpg" class="auth-image" alt="Hangman">
+
+				<h3>Hangman</h3>
+			</div>
+			<div class="work">	
+				<img src="assets/images/LightingOne.jpg" class="auth-image" alt="RPG Game">
+
+				<h3>RPG Game</h3>
+			</div>
+			<div class="work">	
+				<img src="assets/images/LightingTwo.jpg" class="auth-image" alt="Trivia Game">
+
+				<h3>Trivia Game</h3>
+			</div>
+			<div class="work">	
+				<img src="assets/images/LightingThree.jpg" class="auth-image" alt="Rutgers Info Widget">
+
+				<h3>Rutgers Info Widget</h3>
+			</div>
+			<div class="work">	
+				<img src="assets/images/game.jpg" class="auth-image" alt="Rock Paper Scissors">
+
+				<h3>Rock Paper Scissors</h3>
+			</div>
+			
+		</section>
+
+		<section class="sidebar">
+			<div id="connect">
+			<h2>Connect With Me</h2>
+		
+			<a href="https://github.com/jrw4466"></a>
+				<img src="assets/images/1491846948_29_GitHub.png" class="social" alt="GitHub Pic">
+			<a href="https://www.linkedin.com/in/jake-wyatt-ii-42ab9148"></a>
+				<img src="assets/images/1491846863_linkedin_square_color.png" class="social" alt="LinkedIn Pic">
+			<a href="http://stackexchange.com/users/10614883/jwyatt955"></a>
+				<img src="assets/images/1491847006_stackoverflow.png" class="social" alt="StackoverflowPic">
+			</div>
+		</section>
+	</div>
+
+	<footer>
+		<div class="container">
+			&copy; Copyright 2016 Jake Wyatt
 		</div>
-			<div class="lab lab1">Hangman</div>
-			<div class="lab lab2">RPG Game</div>
-			<div class="lab lab3">Trivia Game</div>
-			<div class="lab lab4">Rutgers Info Widget</div>
-			<div class="lab lab5">Rock Paper Scissors</div>
-	</section>
-
-	<section id="Connect">
-		<h2>Connect with Me</h2>
-
-		<hr>
-
-			<a href="https://github.com/jrw4466" target="_blank">
-				<img src="assets/images/1491846948_29_GitHub.png" alt="GitHub Pic">
-			</a>
-			<a href="https://www.linkedin.com/in/jake-wyatt-ii-42ab9148" target="_blank">
-				<img src="assets/images/1491846863_linkedin_square_color.png" alt="LinkedIn Pic">
-			</a>
-			<a href="http://stackexchange.com/users/10614883/jwyatt955">
-				<img src="assets/images/1491847006_stackoverflow.png" alt="StackoverflowPic">
-			</a>
-
-	</section>
-
-	<footer>@ Copyright 2016 Jake Wyatt</footer>
+	</footer>
 
 </body>
 </html>
