--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		
 			<h1>About Me</h1>
 				
-			<img src="assets/images/Profile.jpg" class="auth-image" alt="Profile Pic">
+			<img src="assets/images/profilePic.jpg" class="auth-image" alt="Profile Pic">
 			
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In egestas ante in nisi imperdiet posuere. Praesent suscipit dolor ligula, condimentum mattis odio cursus nec. Cras malesuada pharetra nibh ut sodales. Duis commodo quam est, a finibus tortor convallis at. Curabitur gravida arcu eu urna aliquam volutpat. Donec rhoncus libero sapien, placerat mollis ex sollicitudin nec. Nulla molestie odio felis, a vehicula urna tincidunt ac.</p>
 
